--- a/package.json
+++ b/package.json
@@ -26,13 +26,18 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.28",
+    "angular2-jwt": "^0.2.3",
     "animate.css": "^3.5.2",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "feathers-authentication-client": "^0.3.3",
+    "feathers-client": "^2.3.0",
+    "feathers-rest": "^1.8.0",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.1.0",
+    "superagent": "^3.5.2",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
