--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "express": "^4.15.3",
     "feathers-authentication-client": "^0.3.3",
     "feathers-client": "^2.3.0",
+    "feathers-reactive": "^0.4.1",
     "feathers-rest": "^1.8.0",
+    "feathers-socketio": "^2.0.0",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.1.0",
+    "socket.io-client": "^2.0.3",
     "superagent": "^3.5.2",
     "zone.js": "^0.8.4"
   },
